--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.0.1",
     "@react-three/fiber": "^9.0.4",
     "@tailwindcss/vite": "^4.0.8",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.8",
     "three": "^0.173.0"
   },
